--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,39 @@ add_subdirectory(${PROJECT_SOURCE_DIR}/references)
 
 # Catzilla impls on various operators
 add_subdirectory(${PROJECT_SOURCE_DIR}/recipes)
+
+# ==============================================================
+# ==   house-keeping code
+# ==============================================================
+
+# config clang-format target
+file(GLOB_RECURSE ALL_SOURCE_FILES
+ ${CMAKE_SOURCE_DIR}/recipes/*.cpp
+ ${CMAKE_SOURCE_DIR}/recipes/*.h)
+
+# Define CMAKE target for invoking clang-format
+add_custom_command(
+    OUTPUT clang_format_check_only
+    COMMAND clang-format
+    ARGS --dry-run -Werror ${ALL_SOURCE_FILES}
+    COMMENT "Running clang-format"
+    VERBATIM
+)
+
+add_custom_command(
+    OUTPUT clang_format_and_revise
+    COMMAND clang-format
+    ARGS -i -Werror ${ALL_SOURCE_FILES}
+    COMMENT "Running clang-format"
+    VERBATIM
+)
+
+add_custom_target(
+    format-code
+    DEPENDS clang_format_and_revise
+)
+
+add_custom_target(
+    check-code-format
+    DEPENDS clang_format_check_only
+)
