--- a/recipes/CMakeLists.txt
+++ b/recipes/CMakeLists.txt
@@ -6,5 +6,11 @@ add_executable(catzilla-matmul
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
 set_target_properties(catzilla-matmul PROPERTIES CUDA_ARCHITECTURES ${CUDA_COMPUTE_CAPABILITY})
-target_link_libraries(catzilla-matmul ${CUDA_LIBRARIES} ${CUDA_CUBLAS_LIBRARIES})
+target_link_libraries(catzilla-matmul 
+PRIVATE 
+${CUDA_LIBRARIES} 
+${CUDA_CUBLAS_LIBRARIES}
+
+catz
+)
 
