refactor coord, with template'd design

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,11 +3,15 @@ enable_testing()
 
 set(SOURCES "")
 
-file(GLOB_RECURSE CU_TEST_SOURCES "unittests/*_test.cu")
-list(APPEND SOURCES ${CU_TEST_SOURCES})
+# file(GLOB_RECURSE CU_TEST_SOURCES "unittests/*_test.cu")
+# list(APPEND SOURCES ${CU_TEST_SOURCES})
+#
+# file(GLOB_RECURSE CPP_TEST_SOURCES "unittests/*_test.cpp")
+# list(APPEND SOURCES ${CPP_TEST_SOURCES})
 
-file(GLOB_RECURSE CPP_TEST_SOURCES "unittests/*_test.cu")
-list(APPEND SOURCES ${CPP_TEST_SOURCES})
+# message(${SOURCES})
+
+set(SOURCES "unittests/coord_test.cu")
 
 foreach(src ${SOURCES})
   get_filename_component(binary ${src} NAME_WE)
